<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softengi.mobcomp.softwareengi_mobile.ProfileFragment"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_ll_profile_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/lblTotalSteps"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTotalSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorTurquoise"
                android:textStyle="bold"
                android:text="0"
                android:textSize="20sp"
                android:padding="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_ll_profile_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lblTotalPlans"
                android:textAlignment="center"
                android:textSize="12sp"
                android:padding="3dp"
                />

            <TextView
                android:id="@+id/tvTotalPlans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorTurquoise"
                android:textStyle="bold"
                android:text="0"
                android:textSize="20sp"
                android:padding="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_ll_profile_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lblTotalTeams"
                android:textAlignment="center"
                android:textSize="12sp"
                android:padding="3dp"
                />

            <TextView
                android:id="@+id/tvTotalTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="@color/colorTurquoise"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="1dp"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llProfile"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/lblProfileInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/lblProfileInformation"
            android:textSize="12sp"
            android:textColor="@color/colorDarkGrey"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@id/lblProfileInformation"
            android:background="@color/colorDarkGrey"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/lblProfileInformation"
            android:background="@color/colorDarkGrey"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llProfileInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlProfile"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProfileUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:fontFamily="sans-serif-thin"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:padding="10dp"/>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/etProfileEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/colorBlack"
                android:fontFamily="sans-serif-thin"
                android:background="@drawable/custom_edit_text_grey_background"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawableTint="@color/colorDarkGrey"
                android:drawablePadding="15dp"
                android:padding="10dp"
                android:visibility="visible" />

        </RelativeLayout>


        <CheckBox
            android:id="@+id/chkProfileCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_chk_coach"
            android:textColor="@color/colorBlack"
            android:buttonTint="@color/colorBlack"
            android:fontFamily="sans-serif-thin"
            android:layoutDirection="rtl"
            android:layout_gravity="center"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/etProfileLanguage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/custom_edit_text_grey_background"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/ic_language_black_24dp"
                android:drawableTint="@color/colorDarkGrey"
                android:fontFamily="sans-serif-thin"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:visibility="visible" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llProfileRecentActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_ll_profile_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/lblRecentSteps"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvRecentSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorTurquoise"
                    android:textStyle="bold"
                    android:text="10"
                    android:textSize="20sp"
                    android:padding="1dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_ll_profile_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lblRecentPlans"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:padding="3dp"
                    />

                <TextView
                    android:id="@+id/tvRecentPlans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorTurquoise"
                    android:textStyle="bold"
                    android:text="11"
                    android:textSize="20sp"
                    android:padding="1dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnProfileUpdate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15sp"
            android:layout_weight="1"
            android:text="@string/update"
            android:background="@drawable/transparent_button_background"
            android:backgroundTint="@color/button_turquoise_state"
            android:textColor="@color/button_turquoise_text_state"
            android:fontFamily="sans-serif-smallcaps"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15sp"
            android:layout_weight="1"
            android:text="@string/profile_btn_logout"
            android:background="@drawable/transparent_button_background"
            android:backgroundTint="@color/button_turquoise_state"
            android:textColor="@color/button_turquoise_text_state"
            android:fontFamily="sans-serif-smallcaps" />

    </LinearLayout>

</RelativeLayout>
