...
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/llLoginEtWrapper"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/main_et_username"
            android:background="@drawable/custom_edit_text_background"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
...
            android:padding="10dp" />

    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15sp"
        android:text="@string/main_btn_login"
        android:background="@drawable/transparent_button_background"
...
