...
                android:fontFamily="sans-serif-thin"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text_background"
                android:padding="10dp"/>

            <CheckBox
                android:id="@+id/chkCoach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_chk_coach"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:buttonTint="#FFFFFF"
...
