<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/lvAllTeams"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/btnCreateTeam"
        android:layout_alignParentTop="true"
        android:divider="@color/colorWhiteTransparent">
    </ListView>

    <Button
        android:id="@+id/btnCreateTeam"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/create"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/transparent_button_background"
        android:backgroundTint="@color/button_turquoise_state"
        android:textColor="@color/button_turquoise_text_state"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_margin="10dp" />

</RelativeLayout>