<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/lvYourTeams"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/btnCreateTeam"
        android:layout_alignParentTop="true"
        android:divider="@color/colorWhiteTransparent">
    </ListView>

</RelativeLayout>